k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-management
  namespace: dev
  labels:
    app.kubernetes.io/name: student-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: student-management
  template:
    metadata:
      labels:
        app.kubernetes.io/name: student-management
    spec:
      containers:
      - name: student-management
        image: projectdocker1203/student-management:v1.0.51
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: student-management-svc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: student-management
  ports:
  - name: http
    port: 8080
    targetPort: 8080
